--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/lab": "^5.0.0-alpha.118",
     "@mui/material": "^5.11.8",
     "@mui/styled-engine-sc": "^5.11.0",
+    "@mui/x-date-pickers": "^6.16.1",
     "@nivo/pie": "^0.83.0",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
@@ -39,7 +40,7 @@
     "react-router-dom": "^6.4.0",
     "redux-saga": "^1.2.1",
     "redux-thunk": "^2.4.1",
-    "styled-components": "^6.0.8",
+    "styled-components": "5.3.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
